# ffglplugin-examples

./: CMakeLists.txt  EmptyEffect.cpp  EmptyEffect.h  EvilShader.cpp  EvilShader.h  LICENSE.md  MyPlugin.h  Noise.cpp  Noise.h  Plasma.cpp  Plasma.h  README.md  Spiral.cpp  Spiral.h  Springs.cpp  Springs.h  UnderwaterLife.cpp  UnderwaterLife.h
ffgl-host/: CMakeLists.txt  License.txt  README.txt  main.cpp
ffgl-host/lib/ffgl/: FFDebugMessage.h  FFGLExtensions.h  FFGLShader.cpp  Timer.h
